--- a/SecureStringExtensions/SecureStringExtensions.csproj
+++ b/SecureStringExtensions/SecureStringExtensions.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="images\toolbox.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="images\toolbox.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
